# opengl-house

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  vertices.hpp
include/gfx/: MeshUtils.hpp
include/io/: FileLoader.hpp
shaders/: postProc_frag.glsl  postProc_vert.glsl
src/: main.cpp
src/core/: Window.cpp
src/gfx/: Gui.cpp  Input.cpp  MeshUtils.cpp
src/io/: FileLoader.cpp
